# ova

./: LICENSE  README.md  ova.sh  ova_backend.sh  pyproject.toml
ova/: api.py  audio.py  pipeline.py  utils.py
profiles/default/: prompt.txt
profiles/dua/: prompt.txt
tests/: conftest.py  test_api_acceptance.py
